# macronade-circus2

./: .gitignore  fix.patch  index.html  log.txt  package-lock.json  package.json  projet-macronade.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
public/: assets-manifest.json  pantins-manifest.json
pyside6_port/: README.md  pyproject.toml
pyside6_port/src/macronade_pyside6/: __init__.py  __main__.py  main.py  models.py  project_io.py  timeline_service.py
pyside6_port/tests/: test_project_and_timeline.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FloatingPanel.tsx  FloatingToolbar.tsx  LayersPanel.tsx  LibraryPanel.tsx  OverlayToolbar.tsx  PanelShell.tsx  PropertiesPanel.tsx  SceneView.tsx  Timeline.tsx  team-switcher.tsx
src/components/ui/: avatar.tsx  button.tsx  collapsible.tsx  dropdown-menu.tsx  scroll-area.tsx  separator.tsx  sidebar.tsx  tabs.tsx  toggle.tsx
src/hooks/: use-json-manifest.ts  use-overlay-drag.ts  use-persisted-overlay.ts
src/state/: app-state.tsx
